WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17643
[wx] Scrolling fixes
https://bugs.webkit.org/show_bug.cgi?id=17643
Summary
[wx] Scrolling fixes
Kevin Ollivier
Reported
2008-03-02 21:01:47 PST
Patch to fix scrolling on Windows due to m_isAccepted not being initialized, implement page scrolling, and remove a duplicate wx event binding for the SCROLLWIN_TOP event.
Attachments
wx scrolling fixes
(3.39 KB, patch)
2008-03-02 21:05 PST
,
Kevin Ollivier
alp
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin Ollivier
Comment 1
2008-03-02 21:05:50 PST
Created
attachment 19488
[details]
wx scrolling fixes
Kevin Ollivier
Comment 2
2008-03-02 21:31:28 PST
r=alp, landed in
r30707
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug