Reviewed by Alp Toker.

Scrolling fixes. Implement page scrolling, initialize mouse wheel event variables, and remove duplicate event binding for TOP scrolling event.

http://bugs.webkit.org/show_bug.cgi?id=17643


Canonical link: https://commits.webkit.org/24401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30708 268f45cc-cd09-0410-ab3c-d52691b4dbfc