WebCore/platform/wx/MouseWheelEventWx.cpp
@@ -40,6 +40,10 @@ PlatformWheelEvent::PlatformWheelEvent(const wxMouseEvent& event, const wxPoint&
     , m_metaKey(event.MetaDown()) // FIXME: We'll have to test other browsers
     , m_deltaX(0) // wx doesn't support horizontal mouse wheel scrolling
     , m_deltaY(event.GetWheelRotation() / event.GetWheelDelta())
+    , m_isAccepted(false)
+    , m_isContinuous(false)
+    , m_continuousDeltaX(0)
+    , m_continuousDeltaY(0)
 {
 
 }
